--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,3 +1,4 @@
 <p >
-    <img src="../assets/images/home.jpg" alt="Nature" class="responsive">
+    <img src={{homeImg}} alt="Nature" class="responsive" />
 </p>
+
