image issue fix1

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -8,7 +8,7 @@
 }
 
 .header-image {
-  background-image: url('src\assets\images\logonew.jpg');
+  background-image: url('src\assets\images\header1.jpg');
   background-size : contain;   
  }
 
