--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,10 +5,10 @@
          </span>    
          <span class="headerText">
           <mat-card-title  style="text-align:left;">
-            <p class="text-dark">{{titleTxt}} </p>            
+            <p class="text-white">{{titleTxt}} </p>            
           </mat-card-title>
           <mat-card-subtitle style="text-align:left; ">
-           <p class="text-warning"> {{authorName}} </p> 
+           <p class="text-white"> {{authorName}} </p> 
           </mat-card-subtitle>    
         </span>      
         </mat-card-header>   
