--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,5 @@
-<p >
-    <img src={{homeImg}} alt="Nature" class="responsive" />
-</p>
+<p >   
+    <img src="/assets/images/home.jpg" alt="Nature" class="responsive" >  
+ </p>
 
+ 
