--- a/src/app/coursepage/coursepage.component.html
+++ b/src/app/coursepage/coursepage.component.html
@@ -1,3 +1,3 @@
 <p >
-    <img src={{courseImg}} alt="Nature" class="responsive">
+    <img src="assets/images/course.jpg" alt="Nature" class="responsive">
 </p>
