--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,5 +1,4 @@
-<p >   
-    <img src="/assets/images/home.jpg" alt="Nature" class="responsive" >  
- </p>
+ <p >
+    <img src="assets/images/home.jpg" alt="Nature" class="responsive">
+</p>
 
- 
