--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,67 @@
- <p >
-    <img src="assets/images/home.jpg" alt="Nature" class="responsive">
-</p>
+<div>
+<mat-card style="background-color: goldenrod;  ">     
+    <mat-card-header style="align-content: center;" > 
+        <span class="space">     
+        </span>      
+     <span class="homeImg">
+         <img mat-card-lg-image class="home-image "/> 
+      </span>    
+      <span class="homeText">
+       <mat-card-content  style="text-align:left;">
+       <h4><b>DIRECTOR</b>  <br>
+            Dr. A.S. ASHOK KUMAR, Ph.D. (Y.Sc.) <br>
+            Disciple of "Sri Aakula VENKATESWARA SWAMIGAL" <br>
+            & Trained at "VIVEKANANDA KENDRA, KANYAKUMARI. INDIA" <br>
+            Founder & Executive Chairman of IS.Yoga D.Y.T. -Alumni.(YogasanaAssociation) <br>
+            Managing Trustee Dr. A.S. Ashok Kumar Yoga & Naturopathy Trust <br>
+        </h4>           
+       </mat-card-content>      
+     </span>      
+     </mat-card-header>   
+</mat-card>
+</div>
+
+<div class="profile"> 
+<h2> Consultant: Yoga Treatment, Siddha Medicine, Numerology. </h2>
+<ul>
+    <li>YogaInstructorfrom 1982-85 at Yoga Brother Hood (Regd.) Chennai.</li> <br>
+    <li>Teaching Yoga & Yoga Therapy since 1982</li> <br>
+    <li>Trained ABOUT more than THREE LAKHS individuals in Yoga from all walks of life</li> <br>
+    <li>Trained over 2600 individuals for Diploma in Yoga (to facilitate SELF EMPLOYMENT)</li> <br>
+    <li>Conducted more than 100 Workshops on Conceptof Yoga &Meditation.</li> <br>
+    <li>Trained Stafs of 12 Corporate Companies, Tamil Nadu Electricity Board &Water Board (TN Govt.)</li> <br>
+</ul> 
+
+<h2>PATENTSAND PUBLICATIONS: </h2>
+<ol>
+<li> Aarogya Vazhukku Vazhi Kaatum Yogasanangal (6 th Edition - 326 pages in TAMIL) </li> <br>
+<li> Udal Edai, Thondhi Kuraiya Yoga Sigichai (in TAMIL) N5 EdithonD</li> <br>
+<li>Asanas &Pranayama (278 pages in ENGLISHlnd EJAAon)</li><br> 
+</ol>
+
+<h2>RELEASED ASSETFES CD'S ON  </h2>
+<ol>
+    <li>Introduction to YOGA (in TAMIL) 3. Kundalini - Chakra Meditation</li> <br>
+    <li> Alpha Meditation</li> 
+</ol>
+
+<h2>PROFESSIONAL LIFE MEMBERSHIPS </h2>
+<ul>
+    <li>International Movementfor Tamil Culture All India Siddha Medical System <br></li>
+    <li>All India Nature Cure Federation (New Delhi) Academy for Siddha System <br></li>
+    <li>Indian Board of Naturopathy Indian Scientific Acupuncture Society <br><br></li>
+</ul>
+
+<h2>OBJECTIVE </h2>
+<ul>
+    <li>To bring about awareness on the benefits of YOGA &MEDITATION in the society <br></li>
+    <li>To train youngsters in the field of Yoga Therapy. <br></li>
+    <li>To inculcate among Youths the importance of Yoga and Meditation. <br></li>
+    <li>Toinclude Yoga &Meditation as part of curriculum in the Educational Institutions <br></li>
+    <li>To make life HEALTHIER, HAPPIER& more MEANINGFUL for ALL <br></li>
+</ul>
+<br>
+</div>   
+
+
 
