--- a/src/app/coursepage/coursepage.component.html
+++ b/src/app/coursepage/coursepage.component.html
@@ -1,3 +1,27 @@
-<p >
-    <img src="assets/images/course.jpg" alt="Nature" class="responsive">
-</p>
+<div class="table-responsive" style="background-color: yellowgreen;">
+  <h1 style="text-align: center;">  Course Details</h1>
+<table class="table table-hover table-secondary">
+    <thead thead-light>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Duration</th>
+        <th scope="col">Details</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>DYT</td>
+        <td>5 Days</td>
+        <td>Diployma in yoga </td>
+      </tr>  
+      <tr>
+        <th scope="row">2</th>
+        <td>ABC</td>
+        <td>3 Days</td>
+        <td>Diployma in xysz </td>
+      </tr> 
+</tbody>
+</table>
+</div>
