--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -7,11 +7,9 @@
       <span class="homeText">
        <mat-card-content  style="text-align:left;">
        <h4><b>DIRECTOR</b>  <br>
-            Dr. A.S. ASHOK KUMAR, Ph.D. (Y.Sc.) <br>
+            {{authorName}} <br>
             Disciple of "Sri Aakula VENKATESWARA SWAMIGAL" <br>
-            & Trained at "VIVEKANANDA KENDRA, KANYAKUMARI. INDIA" <br>
-            Founder & Executive Chairman of IS.Yoga D.Y.T. -Alumni.(YogasanaAssociation) <br>
-            Managing Trustee Dr. A.S. Ashok Kumar Yoga & Naturopathy Trust <br>
+            & Trained at "VIVEKANANDA KENDRA, KANYAKUMARI. INDIA" <br>           
         </h4>           
        </mat-card-content>      
      </span>      
