--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,22 @@
 
-<div  >
- <app-header></app-header>
+
+<div style="height:100%; width: 100%;">
+  <div  style="width: 100%; height: 15%;">
+    <app-header></app-header>
+  </div>
+  <div style="width: 100%; height: 85%;">
+    <mat-tab-group >
+      <mat-tab  label="Home"  class="btn btn-primary btn-lg"> 
+        <app-homepage> </app-homepage>
+      </mat-tab>
+      <mat-tab label="Course" class="btn btn-primary btn-lg" > 
+        <app-coursepage></app-coursepage>
+      </mat-tab>
+      <mat-tab label="Contact" class="btn btn-primary btn-lg" > 
+       <app-contactus></app-contactus> 
+      </mat-tab>
+    </mat-tab-group>
+  </div>
 </div>
 
-<mat-tab-group >
-  <mat-tab  label="Home"  class="btn btn-primary btn-lg"> 
-    <app-homepage> </app-homepage>
-  </mat-tab>
-  <mat-tab label="Course" class="btn btn-primary btn-lg" > 
-    <app-coursepage></app-coursepage>
-  </mat-tab>
-  <mat-tab label="Contact" class="btn btn-primary btn-lg" > 
-   <app-contactus></app-contactus> 
-  </mat-tab>
-</mat-tab-group>
+
