--- a/src/app/coursepage/coursepage.component.html
+++ b/src/app/coursepage/coursepage.component.html
@@ -1,10 +1,16 @@
-<div class="table-responsive" style="background-color: yellowgreen;">
-  <h1 style="text-align: center;">  Course Details</h1>
+<div style="background-color: yellowgreen;">
+  <h2 style="text-align: center;"> Sharing experiential secrets (35 years of experience) </h2>
+  <h3>
+    We are offering the following special exercises to cure and prevent physical and mental illnesses. 
+    You are welcome to learn and enjoy benefit
+  </h3>
+</div>
+<div class="table-responsive"> 
 <table class="table table-hover table-secondary">
     <thead thead-light>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Name</th>
+        <th scope="col">Course Name</th>
         <th scope="col">Duration</th>
         <th scope="col">Details</th>
       </tr>
@@ -12,16 +18,41 @@
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>DYT</td>
-        <td>5 Days</td>
-        <td>Diployma in yoga </td>
+        <td>Siddha and Flower Medicine</td>
+        <td>1 Day</td>
+        <td>Siddha Medicine, Pulse and Flower Medicine </td>
       </tr>  
       <tr>
         <th scope="row">2</th>
-        <td>ABC</td>
-        <td>3 Days</td>
-        <td>Diployma in xysz </td>
+        <td>MONEY WORKSHOP</td>
+        <td>1 Day</td>
+        <td>Sakkara Meditation to build Wealth</td>
       </tr> 
+      <tr>
+        <th scope="row">3</th>
+        <td>YOGA FOR STRESS MANAGEMENT</td>
+        <td>4 Hours</td>
+        <td>To heal stress and tension</td>
+      </tr> 
+      <tr>
+        <th scope="row">4</th>
+        <td>YOGA FORBEGINNERSATRAINING&TREATMENT (D.Y.T Basic Course T</td>
+        <td>2 Days</td>
+        <td>Suryanamaskar,Yoga Practice,Alpha Meditation and Eye Practive</td>
+      </tr> 
+      <tr>
+        <th scope="row">5</th>
+        <td>DIPLOMA IN YOGA THERAPY (Y.I.C. & D.Y.T.) </td>
+        <td>3 Days</td>
+        <td>Special diployma course training conducts in May month on every year</td>
+      </tr> 
+        <tr>
+        <th scope="row">6</th>
+        <td>Aavanced Pranayama </td>
+        <td>2 Days</td>
+        <td>Advance Pranayama,Kriyas,Mandras and Bhandhas</td>
+      </tr> 
+      
 </tbody>
 </table>
 </div>
