--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -2,7 +2,7 @@
 <mat-card style="background-color: goldenrod;  ">     
     <mat-card-header style="align-content: center;" >        
      <span class="homeImg">
-         <img mat-card-lg-image class="home-image "/> 
+         <img mat-card-md-image class="home-image "/> 
       </span>    
       <span class="homeText">
        <mat-card-content  style="text-align:left;">
