--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,16 @@
 
-<mat-card style="background-color: blue;   width:100%;">     
+<mat-card style="background-color: blue;   width:100%; height: 110%;">     
   <mat-card-header style="align-content: center;" > 
    <span class="logo">
-       <img mat-card-sm-image class="header-image "/> 
+       <img mat-card-sm-image class="header-image"/> 
     </span>    
     <span class="headerText">
-     <mat-card-content  style="text-align:left; font-size: large;">
-       <h1 class="display-1 text-white">{{titleTxt}} </h1>            
-     </mat-card-content>
-  <!--  <mat-card-subtitle style="text-align:left; ">
-      <p class="text-white"> {{authorName}} </p> 
-     </mat-card-subtitle>    --> 
+     <mat-card-title  style="text-align:left;">
+       <p class="text-white">{{titleTxt}} </p>            
+     </mat-card-title>
+    <mat-card-subtitle style="text-align:left; ">
+      <p class="text-white"> {{subTitleTxt}}  </p>
+     </mat-card-subtitle>    
    </span>      
    </mat-card-header>   
 </mat-card>
