--- a/src/app/coursepage/coursepage.component.html
+++ b/src/app/coursepage/coursepage.component.html
@@ -1,11 +1,10 @@
 <div style="background-color: yellowgreen;">
-  <h2 style="text-align: center;"> Sharing experiential secrets (35 years of experience) </h2>
+  <h2 style="text-align: center;"> Sharing Experiential Secrets (35 years of experience) </h2>
   <h3>
     We are offering the following special exercises to cure and prevent physical and mental illnesses. 
     You are welcome to learn and enjoy benefit
   </h3>
 </div>
-<div class="table-responsive"> 
 <table class="table table-hover table-secondary">
     <thead thead-light>
       <tr>
@@ -55,4 +54,3 @@
       
 </tbody>
 </table>
-</div>
