--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -2,10 +2,10 @@
   <div class="col-lg-5">
     <img src="assets/images/contact.jpg" alt="Nature" class="responsive">
   </div>
-  <div class="col-lg-5" style="background-color: yellowgreen;   width:100%">
-    <h1 style="text-align:center;"> Indian School of Yoga </h1>
-    <h2 style="text-align:center;"> Address </h2>
+  <div class="col-lg-5" style="background-color: yellowgreen;   width:100%">  
+    <h1 style="text-align:center;"> <u>Address</u> </h1>
     <h3 style="text-align:center;">    
+         Indian School of Yoga, <br>
          No. 54,Venkateswara Nagar Rd, <br>
          Mannivakkam Extension,  <br>
          Chennai, Tamil Nadu 600048 <br>
