--- a/src/app/coursepage/coursepage.component.html
+++ b/src/app/coursepage/coursepage.component.html
@@ -1,11 +1,18 @@
-<div style="background-color: yellowgreen;">
+
+<div class="mx-auto bg-warning" style="width:90%">
+
+<div>
   <h2 style="text-align: center;"> Sharing Experiential Secrets (35 years of experience) </h2>
-  <h3>
-    We are offering the following special exercises to cure and prevent physical and mental illnesses. 
-    You are welcome to learn and enjoy benefit
+  <h3 style="text-align: center;">
+   &nbsp; Indian School of Yoga offers the yoga intensive courses. 
+    Courses conducted by India's leading D.Y.T Trainer Dr.A.S.Ashok Kumar and Chief Yoga Therapist.
+  <!--  We are offering the following special exercises to cure and prevent physical and mental illnesses. 
+    You are welcome to learn and enjoy benefit-->
   </h3>
 </div>
-<table class="table table-hover table-secondary">
+
+<div class="table-responsive" >
+<table class="table  table-hover table-secondary table-bordered ">
     <thead thead-light>
       <tr>
         <th scope="col">#</th>
@@ -15,42 +22,47 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Siddha and Flower Medicine</td>
-        <td>1 Day</td>
-        <td>Siddha Medicine, Pulse and Flower Medicine </td>
-      </tr>  
-      <tr>
-        <th scope="row">2</th>
-        <td>MONEY WORKSHOP</td>
-        <td>1 Day</td>
-        <td>Sakkara Meditation to build Wealth</td>
-      </tr> 
-      <tr>
-        <th scope="row">3</th>
-        <td>YOGA FOR STRESS MANAGEMENT</td>
-        <td>4 Hours</td>
-        <td>To heal stress and tension</td>
-      </tr> 
-      <tr>
-        <th scope="row">4</th>
-        <td>YOGA FORBEGINNERSATRAINING&TREATMENT (D.Y.T Basic Course T</td>
-        <td>2 Days</td>
-        <td>Suryanamaskar,Yoga Practice,Alpha Meditation and Eye Practive</td>
-      </tr> 
-      <tr>
-        <th scope="row">5</th>
-        <td>DIPLOMA IN YOGA THERAPY (Y.I.C. & D.Y.T.) </td>
-        <td>3 Days</td>
-        <td>Special diployma course training conducts in May month on every year</td>
-      </tr> 
-        <tr>
+      <tr> 
+      <th scope="row">1</th>
+      <td>YOGA FOR BEGINNERS </td>
+      <td>2 Days</td>
+      <td > Specially desined course for beginners. 
+         Treatment & Training, Asana,Pranayama,Kriyas,Suryanamaskar,
+         Eye sight improvement and Alpha Meditation and Eye Practive 
+       </td>
+    </tr> 
+    <tr>
+      <th scope="row">2</th>
+      <td>Aavanced Pranayama </td>
+      <td>1 Day</td>
+      <td>Specially designed course for effective management of Immune Deficiency and Stress Management.
+          Advance Pranayama,Kriyas,Mandras and Bhandhas</td>
+    </tr> 
+    <tr>
+      <th scope="row">3</th>
+      <td>Chakra Meditation and Money Workshop</td>
+      <td>1 Day</td>
+      <td>Chakra Meditation to build Wealth</td>
+    </tr> 
+    <tr>
+      <th scope="row">4</th>
+      <td>YOGA FOR STRESS MANAGEMENT</td>
+      <td>3 Hours</td>
+      <td>Stress, Depression, Anxiety, Tension & Anger Management for executives. 3 Hours Intensive Course workshop </td>
+    </tr> 
+    <tr>
+      <th scope="row">5</th>
+      <td>DIPLOMA IN YOGA THERAPY (Y.I.C. & D.Y.T.) </td>
+      <td>5 Days</td>
+      <td>Yoga Instructor Certificate & Diploma Course for Self Employment. (95th Batch)</td>
+    </tr>
+    <tr>
         <th scope="row">6</th>
-        <td>Aavanced Pranayama </td>
-        <td>2 Days</td>
-        <td>Advance Pranayama,Kriyas,Mandras and Bhandhas</td>
-      </tr> 
-      
+        <td>Siddha Medicine and Batch Flower Medicine Basic</td>
+        <td>1 Day</td>
+        <td> One day workshop for General public</td>
+      </tr>             
 </tbody>
 </table>
+</div>
+</div>
