--- a/src/app/coursepage/coursepage.component.html
+++ b/src/app/coursepage/coursepage.component.html
@@ -1,5 +1,5 @@
 
-<div class="mx-auto bg-warning" style="width:90%">
+<div class="mx-auto bg-warning" style="width:99%">
 
 <div>
   <h2 style="text-align: center;"> Sharing Experiential Secrets (35 years of experience) </h2>
@@ -11,7 +11,7 @@
   </h3>
 </div>
 
-<div class="table-responsive" >
+<div >
 <table class="table  table-hover table-secondary table-bordered ">
     <thead thead-light>
       <tr>
