--- a/src/app/coursepage/coursepage.component.html
+++ b/src/app/coursepage/coursepage.component.html
@@ -11,7 +11,7 @@
   </h3>
 </div>
 
-<div class="overflow-x:auto">
+<div class="table-responsive">
 <table class="table  table-hover table-secondary table-bordered ">
     <thead thead-light>
       <tr>
