--- a/src/app/coursepage/coursepage.component.html
+++ b/src/app/coursepage/coursepage.component.html
@@ -1,7 +1,5 @@
 
-<div class="mx-auto bg-warning" style="width:99%">
-
-<div>
+<div class="bg-warning">
   <h2 style="text-align: center;"> Sharing Experiential Secrets (35 years of experience) </h2>
   <h3 style="text-align: center;">
    &nbsp; Indian School of Yoga offers the yoga intensive courses. 
@@ -11,7 +9,7 @@
   </h3>
 </div>
 
-<div class="table-responsive-sm">
+<div style="overflow-x:auto;">
 <table class="table  table-hover table-secondary table-bordered ">
     <thead thead-light>
       <tr>
@@ -64,5 +62,4 @@
       </tr>             
 </tbody>
 </table>
-</div>
 </div>
