--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,12 @@
       <mat-tab label="Course" class="btn btn-primary btn-lg" > 
         <app-coursepage></app-coursepage>
       </mat-tab>
+      <mat-tab label="Youtube Chanel" class="btn btn-primary btn-lg" > 
+        <app-gallery></app-gallery> 
+       </mat-tab>
       <mat-tab label="Contact" class="btn btn-primary btn-lg" > 
        <app-contactus></app-contactus> 
-      </mat-tab>
+      </mat-tab>    
     </mat-tab-group>
   </div>
 </div>
