--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <mat-tab label="Course" class="btn btn-primary btn-lg" > 
         <app-coursepage></app-coursepage>
       </mat-tab>
-      <mat-tab label="Youtube Chanel" class="btn btn-primary btn-lg" > 
+      <mat-tab label="Youtube" class="btn btn-primary btn-lg" > 
         <app-gallery></app-gallery> 
        </mat-tab>
       <mat-tab label="Contact" class="btn btn-primary btn-lg" > 
