--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -3,13 +3,17 @@
     <img src="assets/images/contact.jpg" alt="Nature" class="responsive">
   </div>
   <div class="col-lg-5" style="background-color: yellowgreen;   width:100%">  
-    <h1 style="text-align:center;"> <u>Address</u> </h1>
-    <h3 style="text-align:center;">    
-         Indian School of Yoga, <br>
+    <h1 style="text-align:center;"> <u>Address & Course Venue</u> </h1>
+    <h3 style="text-align:left;">    
+         Indian School of Yoga(Regd.), <br>
          No. 54,Venkateswara Nagar Rd, <br>
-         Mannivakkam Extension,  <br>
-         Chennai, Tamil Nadu 600048 <br>
-         Phone: 094440 26341 <br>
+         Mannivakkam Extension,  <br>  
+         ( Land Mark: Near Murugan Temple Bus Stop ) <br>      
+         Chennai - 600048<br>
+         Tamil Nadu <br>
+         South India <br><br>
+         Phone: 91-9444026341 and 91-6380960307<br>
+         
     </h3>
   </div>
  </div>
