--- a/src/app/coursepage/coursepage.component.html
+++ b/src/app/coursepage/coursepage.component.html
@@ -25,8 +25,8 @@
       <td>YOGA FOR BEGINNERS </td>
       <td>2 Days</td>
       <td > Specially desined course for beginners. 
-         Treatment & Training, Asana,Pranayama,Kriyas,Suryanamaskar,
-         Eye sight improvement and Alpha Meditation and Eye Practive 
+         Treatment & Training, Asanas, Pranayama, Kriyas, Suryanamaskar,
+         Eye sight improvement and Alpha Meditation and Eye Practice
        </td>
     </tr> 
     <tr>
@@ -34,13 +34,13 @@
       <td>Aavanced Pranayama </td>
       <td>1 Day</td>
       <td>Specially designed course for effective management of Immune Deficiency and Stress Management.
-          Advance Pranayama,Kriyas,Mandras and Bhandhas</td>
+          Advanced Pranayama, Kriyas, Mandras and Bhandhas</td>
     </tr> 
     <tr>
       <th scope="row">3</th>
       <td>Chakra Meditation and Money Workshop</td>
       <td>1 Day</td>
-      <td>Chakra Meditation to build Wealth</td>
+      <td>Chakra Meditation to build wealth, health and happy life</td>
     </tr> 
     <tr>
       <th scope="row">4</th>
