--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,18 +1,28 @@
 <div class="row">
     <div class="col-lg-4 col-md-6 mb-4">
-        <a href="https://www.youtube.com/watch?v=AGKLaC4lNuw" target="_blank">
+        <a href="https://www.youtube.com/watch?v=TYFz0wIQDgk" target="_blank">
             <img class="img-fluid z-depth-1"
          src="assets/images/yoga.jpg" >  </a>
     </div>
     <div class="col-lg-4 col-md-6 mb-4">
+        <a href="https://www.youtube.com/watch?v=AGKLaC4lNuw" target="_blank">
+            <img class="img-fluid z-depth-1"
+         src="assets/images/asana.jpg" >  </a>
+    </div>
+    <div class="col-lg-4 col-md-6 mb-4">
         <a href="https://www.youtube.com/watch?v=V9c85WJDRfg" target="_blank">
             <img class="img-fluid z-depth-1"
-         src="assets/images/meditation.jpg" >  </a> 
+         src="assets/images/pranayamam.jpg" >  </a> 
     </div>
     <div class="col-lg-4 col-md-6 mb-4">
         <a href="https://www.youtube.com/watch?v=vZP6T7hCKKU" target="_blank">
             <img class="img-fluid z-depth-1"
-         src="assets/images/therapy.jpg" >  </a>
+         src="assets/images/therapy.jpg" >  </a>         
+    </div>
+    <div class="col-lg-4 col-md-6 mb-4">
+        <a href="https://www.youtube.com/watch?v=lCpTPU6RoPA" target="_blank">
+            <img class="img-fluid z-depth-1"
+         src="assets/images/kriya.jpg" >  </a>
     </div>
     <div class="col-lg-4 col-md-6 mb-4">
         <a href="https://www.youtube.com/watch?v=777Cns5RUKo" target="_blank">
@@ -28,10 +38,5 @@
         <a href="https://www.youtube.com/watch?v=vjVbVyEsvX0" target="_blank">
             <img class="img-fluid z-depth-1"
          src="assets/images/koshas.jpg" >  </a>
-    </div>
-    <div class="col-lg-4 col-md-6 mb-4">
-        <a href="https://www.youtube.com/watch?v=lCpTPU6RoPA" target="_blank">
-            <img class="img-fluid z-depth-1"
-         src="assets/images/kriya.jpg" >  </a>
-    </div>
+    </div>  
   </div>
