--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -30,15 +30,17 @@
 
 <h2>PATENTSAND PUBLICATIONS: </h2>
 <ol>
-<li> Aarogya Vazhukku Vazhi Kaatum Yogasanangal (6 th Edition - 326 pages in TAMIL) </li> <br>
-<li> Udal Edai, Thondhi Kuraiya Yoga Sigichai (in TAMIL) N5 EdithonD</li> <br>
-<li>Asanas &Pranayama (278 pages in ENGLISHlnd EJAAon)</li><br> 
+<li> Aarogya Vazhukku Vazhi Kaatum Yogasanangal (9th Edition - 326 pages in TAMIL) </li> <br>
+<li> Udal Edai, Thondhi Kuraiya Yoga Sigichai (in TAMIL) 5th Edition</li> <br>
+<li>Asanas &Pranayama (278 pages in ENGLISH 2nd Edition)</li><br> 
 </ol>
 
-<h2>RELEASED ASSETFES CD'S ON  </h2>
+<h2>RELEASED CD'S</h2>
 <ol>
-    <li>Introduction to YOGA (in TAMIL) 3. Kundalini - Chakra Meditation</li> <br>
-    <li> Alpha Meditation</li> 
+    <li>Introduction to YOGA (in TAMIL)</li> <br>
+    <li>Alpha Meditation</li> <br>
+    <li>Kundalini - Chakra Meditation</li> <br>
+    <li>Yogasanas for Beginners (V.C.D. 4 Parts)</li>
 </ol>
 
 <h2>PROFESSIONAL LIFE MEMBERSHIPS </h2>
